--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -23,10 +23,6 @@ const {t, path} = useLocale(Astro.url)
         <span>{start}-{new Date().getFullYear()}</span>
     </div>
     <div class="text-sm">
-        {t('footer.built-with')}
-        <a class="panda-link italic" href="https://astro.build/">astro</a>, {t('footer.inspired-by')}<a
-            class="panda-link italic ml-1"
-            href="https://bearblog.dev/">bearblog</a
-    >.
+        Copyright © {t('footer.built-with')} All Rights Reserved.
     </div>
 </footer>
