--- a/src/layouts/MDI18nLayout.astro
+++ b/src/layouts/MDI18nLayout.astro
@@ -13,7 +13,7 @@ export const prerender = true
 ---
 
 <Layout title={title}>
-    <div class="mt-9">
+    <article class="prose dark:prose-invert prose-stone mt-9">
         <Content />
-    </div>
+    </article>
 </Layout>
