--- a/src/pages/categories/[category].astro
+++ b/src/pages/categories/[category].astro
@@ -26,4 +26,4 @@ export async function getStaticPaths() {
 const { category } = Astro.props
 ---
 
-<BlogListLayout tag="" category={category} />
+<BlogListLayout category={category} />
