--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -5,21 +5,19 @@ const {start, footer} = PandaConfig;
 const {t, path} = useLocale(Astro.url)
 ---
 
-<footer class="mt-12 mb-6 text-sm">
-
-    <div class="mb-1">
-        {footer &&
-            footer.map((item, index) => (
-                    <span>
-
-              <a href={item.url} class="panda-link">{item.title}</a>
-                        {index !== footer.length - 1 && <span class="mx-1">|</span>}
-                    </span>
-
-            ))
-        }
-    </div>
-    <div class="mb-1">
-        <span>{start}-{new Date().getFullYear()}</span>
+<footer class="mt-16 pt-8 border-t border-gray-200 dark:border-stone-700">
+    <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center gap-4">
+        <div class="flex flex-wrap gap-4 items-center text-sm">
+            {footer &&
+                footer.map((item, index) => (
+                    <a href={item.url} class="footer-link">
+                        {t(item.titleKey)}
+                    </a>
+                ))
+            }
+        </div>
+        <div class="text-sm text-secondary">
+            <span>© {start}-{new Date().getFullYear()}</span>
+        </div>
     </div>
 </footer>
