--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,4 +4,4 @@ import BlogListLayout from '@layouts/BlogListLayout.astro'
 export const prerender = true
 ---
 
-<BlogListLayout tag="" category="" />
+<BlogListLayout category="" />
